--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
                 <%= link_to "Log out", logout_path,{:style=>'color:white; font-family:cursive;float: right;', :class => "css_class",method: "delete"}  %>
               </li>
             <% else %>
-              <li><%= link_to "Log in", login_path ,{:style=>'color:white; font-family:cursive;', :class => "css_class"}%></li>
+              <li><%= link_to "Log in", login_path ,{:style=>'color:white; font-family:cursive;float: right;', :class => "css_class"}%></li>
             <% end %>
           </ul>
           </div>
