--- a/app/views/form1/show.html.erb
+++ b/app/views/form1/show.html.erb
@@ -7,8 +7,13 @@
       <p class="text-uppercase">(Type : Freelancer/self - employed)</p>
     </center>
     <p class="text-justify">Tên/Name: <%= current_user.name%></p>
-    <p class="text-justify">Thời gian/Time: <%= current_user.form1s.last.time_work%></p>
-    <p class="text-justify">Công Việc / Job: <%= current_user.form1s.last.job%></p>
+    <% if current_user.form1s.any? %>
+      <p class="text-justify">Thời gian/Time: <%= current_user.form1s.last.time_work%></p>
+      <p class="text-justify">Công Việc/Job: <%= current_user.form1s.last.job%></p>
+    <%else%>
+      <p class="text-justify">Thời gian/Time: <%= "Blank"%></p>
+      <p class="text-justify">Công Việc/Job: <%= "Blank"%></p>
+    <%end%>
     <table id="table1" class="table table-striped table-bordered" style="width:100%">
       <thead>
         <tr>
