--- a/app/views/form2/show.html.erb
+++ b/app/views/form2/show.html.erb
@@ -7,11 +7,19 @@
       <p class="text-uppercase">Income statement for working at home</p>
       <p class="text-uppercase">(Type : Registered worker at a company)</p>
     </center>
-    <p class="text-justify">Tên công ty/Company Name: <%= current_user.form2s.last.company_name%></p>
-    <p class="text-justify">Mã số thuế/Tax Code: <%= current_user.form2s.last.tax_code%></p>
-    <p class="text-justify">Địa chỉ/Address: <%= current_user.form2s.last.address%></p>
-    <p class="text-justify">Họ và Tên nhân viên/Full Name: <%= current_user.name%></p>
-    <p class="text-justify">Vị trí/Position: <%= current_user.form2s.last.position%></p>
+    <% if current_user.form1s.any? %>
+      <p class="text-justify">Tên công ty/Company Name: <%= current_user.form2s.last.company_name%></p>
+      <p class="text-justify">Mã số thuế/Tax Code: <%= current_user.form2s.last.tax_code%></p>
+      <p class="text-justify">Địa chỉ/Address: <%= current_user.form2s.last.address%></p>
+      <p class="text-justify">Họ và Tên nhân viên/Full Name: <%= current_user.name%></p>
+      <p class="text-justify">Vị trí/Position: <%= current_user.form2s.last.position%></p>
+    <%else%>
+      <p class="text-justify">Tên công ty/Company Name: <%= "Blank"%></p>
+      <p class="text-justify">Mã số thuế/Tax Code: <%= "Blank"%></p>
+      <p class="text-justify">Địa chỉ/Address: <%= "Blank"%></p>
+      <p class="text-justify">Họ và Tên nhân viên/Full Name: <%= "Blank"%></p>
+      <p class="text-justify">Vị trí/Position: <%= "Blank"%></p>
+    <%end%>
     <table id="table2" class="table table-striped table-bordered" style="width:100%">
       <thead>
         <tr>
