--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,8 +44,9 @@
           <ul class="nav navbar-nav navbar-right mr-auto">
             <li><%= link_to "Home",   root_url,{:style=>'color:white; font-family:cursive; float: right;', :class => "css_class"} %></li>
             <% if logged_in? %>
-              <li><%= link_to "User", current_user,{:style=>'color:white; font-family:cursive; float: right;', :class => "css_class"}%></li>
-              <li><%= link_to "View", users_path,{:style=>'color:white; font-family:cursive;float: right;', :class => "css_class"}%></li>
+              <li><%= link_to "User", users_path,{:style=>'color:white; font-family:cursive; float: right;', :class => "css_class"}%></li>
+              <li><%= link_to "View", current_user,{:style=>'color:white; font-family:cursive;float: right;', :class => "css_class"}%></li>
+              <li><%= link_to "Settings", edit_user_path(current_user), {:style=>'color:white; font-family:cursive;float: right;', :class => "css_class"} %></li>
               <li>
                 <%= link_to "Log out", logout_path,{:style=>'color:white; font-family:cursive;float: right;', :class => "css_class",method: "delete"}  %>
               </li>
