--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,9 +1,9 @@
-<h1>Sample App</h1>
+<h1>Nghị lực sống</h1>
 
-<p>Hi <%= @user.name %>,</p>
+<p>Chào <%= @user.name %>,</p>
 
 <p>
-Welcome to the Sample App! Click on the link below to activate your account:
+Chào mừng bạn khi bạn vừa đăng kí tài khoản tại Nghị Lực Sống! Để hoàn tất bước đăng kí vui lòng click vào link phía dưới:
 </p>
 
 <%= link_to "Activate", edit_account_activation_url(@user.activation_token,
