--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,5 +1,5 @@
-Hi <%= @user.name %>,
+Chào <%= @user.name %>,
 
-Welcome to the Sample App! Click on the link below to activate your account:
+Chào mừng bạn khi bạn vừa đăng kí tài khoản tại Nghị Lực Sống! Để hoàn tất bước đăng kí vui lòng click vào link phía dưới:
 
 <%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
