--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,13 +1,12 @@
-<h1>Password reset</h1>
+<h1>Thay đổi mật khẩu</h1>
 
-<p>To reset your password click the link below:</p>
+<p>Để thay đổi mật khẩu, click vào link phía dưới:</p>
 
 <%= link_to "Reset password", edit_password_reset_url(@user.reset_token,
                                                       email: @user.email) %>
 
-<p>This link will expire in two hours.</p>
+<p>Link đổi mật khẩu sẽ hết hạn trong 2 giờ tới</p>
 
 <p>
-If you did not request your password to be reset, please ignore this email and
-your password will stay as it is.
+Nếu bạn không phải người đã yêu cầu đổi mật khẩu, hãy bỏ qua email này và mật khẩu của bạn sẽ vẫn như cũ.
 </p>
